css/main.css
.app-header {
  margin:     0;
  padding:    0;
  top:        0;
  bottom:     0;
  right:      0;
  left:       0;
  width:      100%;
  height:     100vh;
  min-height: 100vh;
  max-height: 100vh;
}

.app-nav {
  padding: 20px;
}

.app-main-ava {
  background-image: url(/img/ava/ava3.jpg);
  background-position: 40% 1%;
  background-size: 160%;
  background-repeat: no-repeat;
  /*
    background-origin: padding-box;
    background-clip: border-box;
    background-attachment: scroll;
    background-color: transparent;
  */
  width: 220px;
  height: 220px;
  box-shadow: 9.5px 9.5px 0 rgb(0,0,0);
  margin-top: 5%;
}

.margin-top {
  margin-top: 20px;
}

a.btn-default:hover {
  color: #bbbbbb !important;
  background: #000000 !important;
}

#app-myname {
  white-space: pre;
  font-size: 9vmin;
  line-height: 1.1;
}

.typed-cursor {
  opacity: 1;
  font-size: 9vmin;
  line-height: 1.1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  -ms-animation: blink 0.7s infinite;
  -o-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}

@keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-webkit-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-moz-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-ms-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-o-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }

body {
  overflow-x: hidden;
}

.app-force-gpu {
  -webkit-transform: translate3d(0,0,0);
  -moz-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  -o-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

a {
	text-decoration: none !important;
}

.transparent {
	opacity: 0.6;
}

.imgicon {
	min-width: 30px;
	width: 30px;
	max-width: 30px;
	min-height: 30px;
	height: 30px;
	max-height: 30px;
	overflow:hidden;
	display: inline-block;
}

.row-eq-height {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
}

.pointer {
	cursor: pointer;
}

.modal-open {
	overflow: hidden !important;
	position: fixed !important;
	width: 100% !important;
}

.novacancy.off {
  opacity: 0.5 !important;
}

